- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.7.0
- 
    None
- 
    Windows + MSVC
- 
        8b64f9336255fa17f1b8e5f337d0e79765512150
When generating a single configuration vcxproj file then the handling of RC_FILE is incorrect for MSVC 2015 (and probably other versions). Even if RC_FILE is set, it never results in an entry being created in the Visual Studio project.
The underlying problem & solution is exactly the same as QTBUG-22545. This was fixed in 4.7.4 but never made it to Qt5 that I can see.